--- a/index.html
+++ b/index.html
@@ -4,9 +4,143 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+<!--main-->
+<div class="main">
+    <!--Main content-->
+    <div class="main_content">
+        <!--about user-->
+        <div class="about">
+            <h2 class="about-position">Front-End Developer</h2>
+            <h1 class="about-name">Anton Chornyi</h1>
+            <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+               sed do eiusmod tempor incididunt ut labore et dolore 
+               magna aliqua. Quis ipsum suspendisse ultrices gravida. 
+               Risus commodo viverra maecenas accumsan lacus vel 
+               facilisis. 
+            </p>
+        </div>
+        <!--Projects-->
+        <div class="project">
+            <h3 class="title">Projects</h3>
+            <ol class="project-list">
+                <li class="projects-item">
+                    <span class="projectss">
+                        <a href="https://hellenglish.goit.global/" class="project-link">https://hellenglish.goit.global/</a>
+                        ................
+                        <span class="project-bracket">[</span> HTML5, CSS3 <span class="project-bracket">]</span>
+                    </span>
+                </li>
+                <li class="projects-item">
+                    <span class="projectss">
+                        <a href="https://cryptohub.goit.global/" class="project-link">https://cryptohub.goit.global/</a>
+                        .................
+                        <span class="project-bracket">[</span> JavaScript <span class="project-bracket">]</span>
+                    </span>
+                </li>
+                <li class="projects-item">
+                    <span class="projectss">
+                        <a href="https://kidslike.goit.global/" class="project-link">https://kidslike.goit.global/</a>
+                        ........................
+                        <span class="project-bracket">[</span> React.js, Node.js <span class="project-bracket">]</span>
+                    </span>
+                </li>
+            </ol>
+        </div>
+        <!--Work Experience-->
+        <div class="work">
+            <h3 class="title">Work Experience</h3>
+            <!--Company 1-->
+            <div>
+                <h4 class="title-company">Front-End Developer<span class="title-text"> Freelance </span></h4>
+                <p class="title-time">September 2019 - up to now <span class="line"> | </span>  Country</p>
+                <ul class="title-list">
+                    <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></li>
+                    <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></li>
+                    <li class="title-dot"><span class="company">Risus commodo viverra maecenas.</span></li>
+                    <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</span></li>
+                </ul>
+            </div>
+            <!--Company 2-->
+            <div>
+                <h4 class="title-company">Manager <span class="title-text"> Roga & Kopyta New</span></h4>
+                <p class="title-time">March 2015 - October 2018  <span class="line"> | </span>  Country</p>
+                <ul class="title-list">
+                    <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</span></li>
+                    <li class="title-dot"><span class="company">Quis ipsum suspendisse ultrices gravida.</span></li>
+                    <li class="title-dot"><span class="company">Risus commodo viverra maecenas.</span></li>
+                </ul>
+            </div>
+            <!--Company 3-->
+            <div>
+            <h4 class="title-company">Manager <span class="title-text"> Roga & Kopyta LLC</span></h4>
+            <p class="title-time">June 2014 - February 2015 <span class="line"> | </span> Country</p>
+            <ul class="title-list">
+                <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></li>
+                <li class="title-dot"><span class="company">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></li>
+                <li class="title-dot"><span class="company">Risus commodo viverra maecenas.</span></li>
+            </ul>
+            </div>
+        </div>
+        <!--Education-->
+        <div>
+            <h3 class="title">Education</h3>
+            <!--Education 1-->
+            <div>
+                <h4 class="education">National University of Radioelectronics</h4>
+                <p class="managment">Management</p>
+                <p class="title-time">September 2009 - June 2014 <span class="line"> | </span> Country</p>
+            </div>
+        </div>
+    </div>
+    <!--Sidebar-->
+    <aside class="side_bar">
+        <img src="img/pic1.jpg" alt="user photo" class="photo">
+        <!--Contacs-->
+        <div class="contacs">
+            <h3 class="sidebar_title">Contacs</h3>
+            <div>
+                <p>
+                    <span class="contact_teg">C: </span>
+                    <a href="tel:+94834792" class="tel">+94834792</a>
+                </p>
+                <p>
+                    <span class="contact_teg">E: </span>
+                    <a href="mailto:gfygd@gmail.com" class="mail">gfygd@gmail.com</a>
+                </p>
+            </div>
+        </div>
+        <!--Tech Skills-->
+        <div class="tech_skills">
+            <h3 class="sidebar_title">Tech Skills</h3>
+            <ul class="sidebar_skills_list">
+                <li class="skills_dot"><span class="skills_list">HTML5</span></li>
+                <li class="skills_dot"><span class="skills_list">CSS3</span></li>
+                <li class="skills_dot"><span class="skills_list">GIT</span></li>
+                <li class="skills_dot"><span class="skills_list">WebPack</span></li>
+                <li class="skills_dot"><span class="skills_list">JavaScript</span></li>
+                <li class="skills_dot"><span class="skills_list">React.js</span></li>
+                <li class="skills_dot"><span class="skills_list">Node.js</span></li>
+            </ul>
+        </div>
+        <!--Soft Skills-->
+        <div class="soft_skils">
+            <h3 class="sidebar_title">Soft Skills</h3>
+            <ul class="sidebar_soft_list">
+                <li class="soft_dot"><span class="soft_list">Scrum</span></li>
+                <li class="soft_dot"><span class="soft_list">Agile</span></li>
+                <li class="soft_dot"><span class="soft_list">GTD</span></li>
+                <li class="soft_dot"><span class="soft_list">Teamwork</span></li>
+            </ul>
+        </div>
+    </aside>
+
+</div>
 </body>
 </html>
