--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="main_content">
         <!--about user-->
         <div class="about">
-            <h2 class="about-position">Front-End Developer</h2>
-            <h1 class="about-name">Anton Chornyi</h1>
+            <h2 class="about-position"></h2>
+            <h1 class="about-name">Marienko Kirill</h1>
             <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                sed do eiusmod tempor incididunt ut labore et dolore 
                magna aliqua. Quis ipsum suspendisse ultrices gravida. 
